--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -82,7 +82,7 @@ nav li {
 .enter {
   background-color: #874C62;
   border: none;
-  color: $text-color;
+  color: #FFFFFF;
   border-radius: 4px;
   padding: 0.5em;
   margin-top: .5em;
