--- a/src/css/guest-view.scss
+++ b/src/css/guest-view.scss
@@ -1,18 +1,9 @@
+$primary-background: #A7D2CB;
 $text-color: #414141;
+$body-font-family: 'Open Sans';
 
 .hidden {
   display: none;
-}
-
-.new-reservation-button,
-.home-button {
-  background-color: #F2D388;
-  border: none;
-  color: $text-color;
-  border-radius: 4px;
-  padding: 0.5em;
-  margin-top: .5em;
-  margin-left: 2em;
 }
 
 
