--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -55,16 +55,24 @@ nav li {
 
 .center {
   background-color: $primary-background;
+  box-sizing: content-box;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   // height: 80%;
   width: 80%;
-  margin: 2em 0 0 1em;
+  margin: 2em 0 0em 1em;
   -webkit-box-shadow: 0 10px 6px -6px #777;
   -moz-box-shadow: 0 10px 6px -6px #777;
   box-shadow: 0 10px 6px -6px #777;
+}
+.new-reservation-search {
+  @extend .center;
+}
+
+.date-search-results {
+  @extend .center;
 }
 
 
